# mahjong

./: Cargo.toml  README.md
src/: lib.rs
src/rules/: mentsu.rs  mod.rs  tile.rs
src/serial/: mod.rs
