[package]
name = "mahjong"
description = "Functionality relating to the game of mahjong, particulary riichi mahjong."
homepage = "https://github.com/rheber/mahjong"
repository = "https://github.com/rheber/mahjong"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
categories = ["game-development"]
keywords = ["riichi", "mahjong", "game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
regex = "1.9.1"
